# gazebo_selfie_sim

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_selfie_sim.yaml
include/gazebo_selfie_sim/: IndicatorPlugin.hh
launch/: sim.launch
scripts/: manual_steering.py  servo_throttle_commands.py  sim_manager.py  simulation_bridge.py
src/: IndicatorPlugin.cpp
vehicles/: README.md
vehicles/launch/: spawn_car.launch
vehicles/models/selfie/: load_params.xacro  macros.xacro  selfie.gazebo  selfie.xacro
vehicles/models/selfie/config/: dims.yaml
vehicles/models/selfie2021/: macros.xacro  selfie.gazebo  selfie2021.xacro
vehicles/models/selfie2021/config/: gazebo_selfie_sim.yaml
vehicles/sensors/camera/: properties.xacro
vehicles/sensors/depth_camera/: properties.xacro
vehicles/sensors/distance/: .properties.xacro.swp  properties.xacro
vehicles/sensors/hokuyo/: properties.xacro
worlds/: README.md
worlds/launch/: world.launch
worlds/models/box/: model.sdf
worlds/models/cali_mat/: model.sdf
worlds/models/carollo_track_v0/: model.sdf
worlds/models/carollo_track_v1/: model.sdf
worlds/models/carollo_track_v2/: model.sdf
worlds/models/carollo_track_v3/: model.sdf
worlds/models/cc22_track_v0/: model.sdf
worlds/models/cc22_track_v1/: model.sdf
worlds/models/cc22_track_v2/: model.sdf
worlds/models/cc22_track_v3/: model.sdf
worlds/models/easy_track/: model.sdf
worlds/models/easy_track2/: model.sdf
worlds/models/meshes/: 30_Zone.stl  Downhill_grade.stl  Expressway_beginning.stl  Expressway_end.dae  Expressway_end.stl  Give_way.dae  Give_way.stl  Parking.stl  Parking_zone.dae  Preference.dae  Preference.stl  Ramp.dae  Ramp.stl  Sharp_turn_left_long_1_leg.dae  Sharp_turn_left_long_1_leg.stl  Sharp_turn_left_long_2_legs.dae  Sharp_turn_left_long_2_legs.stl  Sharp_turn_left_short.dae  Sharp_turn_left_short.stl  Stop.stl  Uphill_grade.stl  Zebra_crossing.stl
worlds/models/missing_lines/: model.sdf
worlds/models/our_track/: model.sdf
worlds/models/road_signs/20_Zone/: model.config  model.sdf
worlds/models/road_signs/20_Zone_End/: model.config  model.sdf
worlds/models/road_signs/30_Zone/: model.config  model.sdf
worlds/models/road_signs/30_Zone_End/: model.config  model.sdf
worlds/models/road_signs/Barred_area/: model.config  model.sdf
worlds/models/road_signs/Downhill_grade/: model.config  model.sdf
worlds/models/road_signs/Expressway_beginning/: model.config  model.sdf
worlds/models/road_signs/Expressway_end/: model.config  model.sdf
worlds/models/road_signs/Give_way/: model.config  model.sdf
worlds/models/road_signs/Left_turn/: model.config  model.sdf
worlds/models/road_signs/No_passing_zone_beginning/: model.config  model.sdf
worlds/models/road_signs/No_passing_zone_end/: model.config  model.sdf
worlds/models/test-free-drive/: model.sdf
worlds/models/test-intersection-preference/: model.sdf
worlds/models/test-parking/: model.sdf
worlds/worlds/: cali_mat.world  carollo_track_v0.world  carollo_track_v1.world  carollo_track_v2.world  carollo_track_v3.world  cc22_track_v0.world  cc22_track_v1.world  cc22_track_v2.world  cc22_track_v3.world  easy_track.world  easy_track2.world  missing_lines.world  our_track.world  test-intersection-no-preference.world  test-intersection-preference.world  test-obstacles.world  test-parking.world  test.world
(+22 files in other folders)
