<?xml version="1.0"?>
<package format="2">
  <name>gazebo_selfie_sim</name>
  <version>0.0.0</version>
  <description>The gazebo_selfie_sim package</description>

  <maintainer email="pawel@todo.todo">pawel</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
