<?xml version="1.0"?>
<package format="2">
  <name>gazebo_selfie_sim</name>
  <version>0.0.0</version>
  <description>The gazebo_selfie_sim package</description>

  <maintainer email="pawel@todo.todo">pawel</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/.."
    /> 
  </export>
</package>
