<?xml version="1.0"?>
<package format="2">
  <name>gazebo_selfie_sim</name>
  <version>0.0.0</version>
  <description>The gazebo_selfie_sim package</description>

  <maintainer email="pawel@todo.todo">pawel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>effort_controllers</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>rospy</depend>
  <depend>roslint</depend>
  <depend>tf</depend>
  <depend>custom_msgs</depend>
  <depend>gazebo_plugins</depend>
  


  <export>
    <!-- gazebo_ros_paths_plugin automatically adds these to
        GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros                                                                 
        gazebo_model_path="${prefix}/worlds/models"
    /> 
    <gazebo_ros  
    gazebo_model_path="${prefix}/worlds/models/road_signs"
    /> 
  </export>
</package>
